@@ -26,6 +26,7 @@
 {3, 39, "smc PENTAX-F* 600mm F4 ED[IF]"},
 {3, 40, "smc PENTAX-F Macro 100mm F2.8"},
 {3, 41, "smc PENTAX-F Macro 50mm F2.8 or Sigma Lens"},
+{3, 42, "Sigma 300mm F2.8 EX DG APO IF"},
 {3, 44, "Sigma or Tamron Lens (3 44)"},
 {3, 46, "Sigma or Samsung Lens (3 46)"},
 {3, 50, "smc PENTAX-FA 28-70mm F4 AL"},
@@ -182,9 +183,18 @@
 {8, 27, "Sigma 18-200mm F3.5-6.3 II DC HSM"},
 {8, 28, "Sigma 18-250mm F3.5-6.3 DC Macro HSM"},
 {8, 29, "Sigma 35mm F1.4 DG HSM"},
-{8, 30, "Sigma 17-70mm F2.8-4 DC Macro HSM Contemporary"},
+{8, 30, "Sigma 17-70mm F2.8-4 DC Macro HSM | C"},
 {8, 31, "Sigma 18-35mm F1.8 DC HSM"},
 {8, 32, "Sigma 30mm F1.4 DC HSM | A"},
+{8, 34, "Sigma 18-300mm F3.5-6.3 DC Macro HSM"},
+{8, 59, "HD PENTAX-D FA 150-450mm F4.5-5.6 ED DC AW"},
+{8, 60, "HD PENTAX-D FA* 70-200mm F2.8 ED DC AW"},
+{8, 61, "HD PENTAX-D FA 28-105mm F3.5-5.6 ED DC WR"},
+{8, 62, "HD PENTAX-D FA 24-70mm F2.8 ED SDM WR"},
+{8, 63, "HD PENTAX-D FA 15-30mm F2.8 ED SDM WR"},
+{8, 198, "smc PENTAX-DA L 18-50mm F4-5.6 DC WR RE"},
+{8, 199, "HD PENTAX-DA 18-50mm F4-5.6 DC WR RE"},
+{8, 200, "HD PENTAX-DA 16-85mm F3.5-5.6 ED DC WR"},
 {8, 209, "HD PENTAX-DA 20-40mm F2.8-4 ED Limited DC WR"},
 {8, 210, "smc PENTAX-DA 18-270mm F3.5-6.3 ED SDM"},
 {8, 211, "HD PENTAX-DA 560mm F5.6 ED AW"},
